welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:27: error: not found: value couleurs
    setCouleurBrosse(couleurs(i))
                     ^Array1:27: error: not found: value i
    setCouleurBrosse(couleurs(i))
                              ^